tests/functional/lang/parse-fail-unexpected-int.err.exp
error: syntax error, unexpected integer, expecting 'inherit'
       at «stdin»:1:3:
            1| { 1 = x; }
             |   ^
            2|
